--- a/backend/package.json
+++ b/backend/package.json
@@ -10,19 +10,19 @@
     "test": "jest --runInBand"
   },
   "dependencies": {
-    "@prisma/client": "^6.15.0",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.19.2",
-    "multer": "^2.0.2",
-    "pg": "^8.16.3",
-    "prisma": "^6.15.0"
+    "@prisma/client": "6.15.0",
+    "bcrypt": "5.1.1",
+    "cors": "2.8.5",
+    "dotenv": "16.6.1",
+    "express": "4.19.2",
+    "multer": "2.0.2",
+    "pg": "8.16.3",
+    "prisma": "6.15.0"
   },
   "devDependencies": {
-    "jest": "^30.1.3",
-    "nodemon": "^3.1.0",
-    "supertest": "^7.1.4"
+    "jest": "30.1.3",
+    "nodemon": "3.1.0",
+    "supertest": "7.1.4"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
