--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^3.0.2",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-calendar": "^6.0.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
     "react-slick": "^0.31.0",
