--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js",
+    "start": "node --max-old-space-size=4096 server.js",
     "reset": "prisma migrate reset --force",
     "test": "jest --runInBand"
   },
