--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,14 +9,13 @@ jobs:
     strategy:
       matrix:
         project: [backend, frontend]
-        node-version: [18]
     name: Run ${{ matrix.project }} Unit Tests (Node ${{ matrix.node-version }})
     steps:
       - uses: actions/checkout@v3
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: ${{ matrix.project == 'frontend' && '20' || '18' }}
       - name: Install dependencies
         working-directory: ${{ matrix.project }}
         run: npm ci
